<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>throughput_performance_test</name>
  <version>0.0.0</version>
  <description>ROS2 throughput performance test.</description>
  <maintainer email="hoe@fh-wedel.de">Hermann Höhne</maintainer>
  <license>MIT</license>
  <url type="repository"></url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>ament_index_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
